--- a/index-style.css
+++ b/index-style.css
@@ -60,10 +60,10 @@ form {
     width: 300px;
     margin-left: auto;
     margin-right: auto;
-    border: 1px solid #DAC4F7;
+    border: 1px solid gray;
     border-radius: 15px;
     padding: 20px;
-    background-color: #DAC4F7;
+    background-color: gray;
     display: inline-block
 }
 
